--- a/inicio/style.css
+++ b/inicio/style.css
@@ -2,19 +2,44 @@
 
 
 
-@media screen and (min-width:600px ){
+@media screen and (min-width:601px ){
 
     body{
+        
         width: 600px;
         margin: auto;
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
+    iframe{
+        display: block;
+        margin: auto;
+        border-radius: 20px;
+        width:420px;
+        height:450px;
+        
+
+    }
+
+    
+
     
 }
-@media screen and (min-width:600px ){
+@media screen and (max-width:600px ){
+    
+  
+
     
     body{
         font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+
+    iframe{
+        display: block;
+        margin: auto;
+        border-radius: 20px;
+        width:350px;
+        height:450px;
+
     }
      
 
@@ -56,7 +81,7 @@
         padding: 5px;
         border-radius: 10px;
         font-weight: bold;
-        margin-right: 5px;
+        margin: 5px;
         box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.275);
     }
     nav a:hover{
