--- a/inicio/style.css
+++ b/inicio/style.css
@@ -33,8 +33,7 @@
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
     nav a{
-        margin-top: 10px;
-        margin-right: 5px;
+        margin-right: 3px;
         display: inline-table;
     }
     video{
@@ -46,8 +45,9 @@
         display: block;
         margin: auto;
         border-radius: 20px;
-        width:310px;
+        width:300px;
         height:400px;
+        
 
     }
      
@@ -82,7 +82,8 @@
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
     nav a{
-        font-size: 20px;font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 20px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         color: black;
         text-decoration: none;
         margin-top: 10px;
@@ -90,7 +91,7 @@
         padding: 5px;
         border-radius: 10px;
         font-weight: bold;
-        margin: 5px;
+       margin: 5px;
         box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.275);
     }
     nav a:hover{
