--- a/diadia/style.css
+++ b/diadia/style.css
@@ -21,7 +21,11 @@
     }
     video{
         width: 330px;
-       
+    }
+    div{
+
+    width: 110px;
+    height: 200px;
     }
      
 
@@ -130,7 +134,7 @@
             margin: auto;
             box-shadow: 1px 1px 4px 1px black;
             border-radius: 20px;
-            width: 130px;
+            width: 140px;
             height: 230px;
             padding: 10px;
             margin: 10px;
