--- a/classico/style.css
+++ b/classico/style.css
@@ -15,6 +15,18 @@
     body{
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
+    nav a{
+        margin-right: 3px;
+        display: inline-table;
+    }
+    video{
+        width: 330px;
+    }
+    div{
+
+    width: 110px;
+    height: 200px;
+    }
      
 
 
@@ -41,8 +53,11 @@
             margin-top: 30px;
             text-align: center;
         }
-        p{
-            font-size: 19px;
+        header p{
+            
+            font-size: 18px;
+            text-align: justify;
+            text-indent: 15px;
         }
         header li{
             font-size: 17px;
@@ -121,8 +136,8 @@
             margin: auto;
             box-shadow: 1px 1px 4px 1px black;
             border-radius: 20px;
-            width: 160px;
-            height: 270px;
+            width: 140px;
+            height: 230px;
             padding: 10px;
             margin: 10px;
         }
@@ -137,7 +152,7 @@
         div img{
         
             padding: 10px;
-            width: 120px;
+            width: 110px;
             height: 120px;
             
         }
@@ -193,9 +208,11 @@
         footer p{
             text-align: center;
             padding: 10px;
+            
+            font-size: 17px;
         }
         footer li{
-            font-size: 18px;
+            font-size: 17px;
             
         }
 
