--- a/diadia/style.css
+++ b/diadia/style.css
@@ -56,6 +56,8 @@
         header p{
             font-family: Georgia, 'Times New Roman', Times, serif;
             font-size: 18px;
+            text-align: justify;
+            text-indent: 15px;
         }
         header li{
             font-size: 17px;
@@ -115,8 +117,8 @@
         video{
             display: block;
             margin: auto;
-            width: 340px;
-            height: 210px;
+            width: 380px;
+            height: 220px;
             border-radius: 15px;
             margin-bottom: 15px;
             
