--- a/diadia/style.css
+++ b/diadia/style.css
@@ -137,6 +137,7 @@
             padding: 10px;
             margin: 8px;
             margin-right:5px ;
+            font-size: 17px;
         }
         div h3{
             margin-top: -4px;
