--- a/classico/style.css
+++ b/classico/style.css
@@ -20,13 +20,9 @@
         display: inline-table;
     }
     video{
-        width: 330px;
+        width: 320px;
     }
-    div{
-
-    width: 110px;
-    height: 200px;
-    }
+  
      
 
 
@@ -119,7 +115,7 @@
         video{
             margin-top: 20px;
             border-radius: 20px;
-            width: 380px;
+            width: 340px;
             height: 220px;
             
 
@@ -136,10 +132,11 @@
             margin: auto;
             box-shadow: 1px 1px 4px 1px black;
             border-radius: 20px;
-            width: 140px;
-            height: 230px;
+            width: 110px;
+            height: 120px;
             padding: 10px;
-            margin: 10px;
+            margin: 8px;
+            margin-right:5px ;
         }
         div h3{
             margin-top: -4px;
@@ -152,8 +149,8 @@
         div img{
         
             padding: 10px;
-            width: 110px;
-            height: 120px;
+            width: 100px;
+            height: 110px;
             
         }
         div .preço{
@@ -182,6 +179,7 @@
         }
         div p{
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-size: 16px;
         }
         .midias{
             padding: 0px;
