--- a/classico/style.css
+++ b/classico/style.css
@@ -65,7 +65,8 @@
             margin-bottom: 20px;
         }
         nav a{
-            font-size: 20px;font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 20px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
             color: white;
             text-decoration: none;
             margin-top: 10px;
