--- a/classico/style.css
+++ b/classico/style.css
@@ -50,7 +50,7 @@
             text-align: center;
         }
         header p{
-            
+            font-family: Georgia, 'Times New Roman', Times, serif;
             font-size: 18px;
             text-align: justify;
             text-indent: 15px;
