--- a/classico/style.css
+++ b/classico/style.css
@@ -10,7 +10,7 @@
     }
     
 }
-@media screen and (min-width:600px ){
+@media screen and (max-width:600px ){
     
     body{
         font-family: Georgia, 'Times New Roman', Times, serif;
