--- a/elegante/style.css
+++ b/elegante/style.css
@@ -15,6 +15,14 @@
     body{
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
+
+    nav a{
+        margin-right: 3px;
+        display: inline-table;
+    }
+    video{
+        width: 320px;
+    }
      
 
 
@@ -41,8 +49,11 @@
             margin-top: 30px;
             text-align: center;
         }
-        p{
-            font-size: 19px;
+        header p{
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 18px;
+            text-align: justify;
+            text-indent: 15px;
         }
         header li{
             font-size: 17px;
@@ -101,11 +112,14 @@
             margin-left: 10px;
             margin-right: 10px;
             text-indent: 15px;
+            font-size: 17px;
         }
         video{
-            margin-top: 20px;
-            border-radius: 20px;
-            width: 380px;
+            margin: auto;
+            display: block;
+            margin-top: 15px;
+            border-radius: 15px;
+            width: 340px;
             height: 220px;
             
 
@@ -122,10 +136,13 @@
             margin: auto;
             box-shadow: 1px 1px 4px 1px black;
             border-radius: 20px;
-            width: 160px;
-            height: 270px;
+            width: 110px;
+            height: 120px;
             padding: 10px;
-            margin: 10px;
+            margin: 8px;
+            margin-right:5px ;
+
+
         }
         div h3{
             margin-top: -4px;
@@ -134,7 +151,7 @@
             border-radius: 20px;
             color: white;
             
-            font-family: Arial, Helvetica, sans-serif;
+            
         }
         div img{
         
@@ -158,7 +175,7 @@
             border-radius: 20px;
             color: white;
             font-weight: bold;
-            font-family: Arial, Helvetica, sans-serif;
+            
 
         }
         div a:hover{
@@ -170,11 +187,12 @@
         }
         div p{
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-size: 16px;
         }
         .midias{
             padding: 0px;
             display: inline-table;
-            margin: 15px;
+            margin: 10px;
             border-radius: 15px;
             width: 54px;
             height: 54px;
@@ -196,9 +214,10 @@
         footer p{
             text-align: center;
             padding: 10px;
+            font-size: 17px;
         }
         footer li{
-            font-size: 18px;
+            font-size: 17px;
             
         }
 
