--- a/elegante/style.css
+++ b/elegante/style.css
@@ -10,7 +10,7 @@
     }
     
 }
-@media screen and (min-width:600px ){
+@media screen and (max-width:600px ){
     
     body{
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -35,7 +35,7 @@
             text-shadow: 1px 1px 1px black;
             text-align: center;
             font-family: 'Times New Roman', Times, serif ;
-            padding: 8px;
+            padding: 4px;
         }
         .logo{
             border-radius: 20px;
@@ -65,7 +65,8 @@
             margin-bottom: 20px;
         }
         nav a{
-            font-size: 20px;font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 20px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
             color: white;
             text-decoration: none;
             margin-top: 10px;
@@ -92,7 +93,7 @@
             margin: auto;
             text-align: center;
             background-color: rebeccapurple;
-            font-weight: bold;
+            
             width: 140px;
             padding: 5px;
             border-radius: 15px;
@@ -156,7 +157,7 @@
         div img{
         
             padding: 10px;
-            width: 120px;
+            width: 100px;
             height: 120px;
             
         }
